Falta arreglar imagen

--- a/web/register_beta.html
+++ b/web/register_beta.html
@@ -9,9 +9,10 @@
     Nombre: <input type ="text" value ="name" name="name"><br>
     Email: <input type ="email" value ="email" name = "email"><br>
     Contraseña: <input type ="password" value = "contasenia" name = "password"><br>
-    Fecha nachimiento:<input type="date" data-date="" data-date-format="DD MM YYYY" name="birthDate"><br>
+    Fecha nachimiento: <input type="date" value="2015-08-09" name="birthDate"><br>
     Color de piel: <input type = "text" name = "skinColor" value ="Color de piel"><br>
-    Condicion de piel: <input type = "text" name = "skinCondition" value = "Condicion de piel"><br><br><br>
+    Condicion de piel: <input type = "text" name = "skinCondition" value = "Condicion de piel"><br>
+    Subir foto de perfil:  <input type="file" accept="image/*" name = "userImg"><br><br><br>
 
     <input type = "submit">
 
